[gd_scene load_steps=3 format=3 uid="uid://bnp3j30gco8hx"]

[ext_resource type="Script" path="res://scripts/racine.gd" id="1_jqgsl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_55lxp"]

[node name="Racine" type="Node2D"]
script = ExtResource("1_jqgsl")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.52295e-06, -2.52295e-06)
shape = SubResource("RectangleShape2D_55lxp")

[node name="RayCastHaut" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)
collide_with_areas = true

[node name="RayCastBas" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)
collide_with_areas = true
collide_with_bodies = false

[node name="RayCastGauche" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)
collide_with_areas = true

[node name="RayCastDroite" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)
collide_with_areas = true

[node name="DureeVie" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="DureeVie" to="." method="_on_duree_vie_timeout"]
